css/stylesheet.css
* {
    padding: 0;
    margin: 0;
}
body {
    background-color: #121212;
    font-family: Arial, Helvetica, sans-serif;
}
#container {
    max-width: 1600px;
    height: 100vh;
    margin: 0 auto;
    perspective: 1000px;
}
nav {
    background-color: #282828;
    border-radius: 6px;
    padding: 4px 6px;
    margin: 10px;
    transform: rotateX(10deg); /* Rotates the navbar along the X-axis */
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); /* Adds shadow for depth */
    transition: transform 0.3s ease; /* Smooth animation for hover */
}
nav {
    opacity: 0;
    transform: rotateX(20deg);
    transition: transform 0.6s ease, opacity 0.6s ease;
}
nav[data-page-loaded="true"] {
    opacity: 1;
    transform: rotateX(10deg);
}
nav:hover {
    transform: rotateX(0deg);
}
nav:hover ul li a {
    transform: translateX(0px) translateY(-5px);
    filter: drop-shadow(3px 5px 5px rgba(0, 0, 0, 0.5));
    box-shadow: none;
}
nav ul {
    display: flex;
    flex-direction: row;
    column-gap: 8px;
    list-style: none;
}
.perspective-wrapper {
    perspective: 500px;
}
nav ul li a {
    display: inline-block;
    background-color: #d4584c;
    color: white;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 2px;
    text-align: center;
    padding: 10px 8px;
    border-radius: 6px;
    cursor: pointer;
    transform: translateZ(10px) rotateX(-10deg);
    transition: transform 0.3s ease, filter 0.3s ease, background-color 0.3s ease, border 0.3s ease, box-shadow 0.3s ease;
    transform-style: preserve-3d;
    text-decoration: none;
}
nav ul li a:hover {
    background-color: #de7163;
    animation: glint 0.3s linear;
}
nav ul li a:active, nav ul li a.active {
    transform: translateY(0px);
    box-shadow: none;
    background-color: #ca3b35;
}
nav ul li a.active:hover {
    background-color: #ca3b35; /* Maintain active state color */
    box-shadow: none; /* Prevent hover effects */
    transform: translateY(0px); /* Prevent hover lift */
}
.current {
    transform: translateY(-5px);
    filter: drop-shadow(3px 5px 5px rgba(0, 0, 0, 0.5));
}
@keyframes glint {
    20% {
        background-image: linear-gradient(to bottom right, white, #de7163, #de7163, #de7163);
    }
    40% {
        background-image: linear-gradient(to bottom right, #de7163, white, #de7163, #de7163);
    }
    60% {
        background-image: linear-gradient(to bottom right, #de7163, #de7163, white, #de7163);
    }
    80% {
        background-image: linear-gradient(to bottom right, #de7163, #de7163, #de7163, white);
    }
}
@media (max-width: 768px) {
    nav {
        perspective: 800px;
        transform: rotateX(5deg);
    }
}
@media (min-width: 1200px) {
    #container {
        perspective: 1500px;
    }
}

